# textblast

./: README.md  Run3.py  alembic.ini  fort_small - Copy.csv  hello.py  main.py  old-main.py  output.csv  process2.py  process4.py  pyproject.toml  python code.txt  readme.openai.md  requirements.txt  responder.py  responder2.py  response3.py
alembic/: env.py
alembic/versions/: 4eb73cfb4839_conversation_table.py  500f3c78e940_create_unique_constraint_on_user_phone.py  8943f71b2f3b_campaign_table.py  c5e798fe7a03_create_user_table.py  feab36c7c633_add_converstion_table.py
data/: Sample Leads List.csv  Testing Leads List.csv  sqlite3-ddl.sql
doc/: TODO.md
docker/: deployment.yaml  postgres.compose.yaml
old/: Run.py  Run4.py  content_templates.json  fort_small.csv  process.py  process4.py  python code.py  response.py  response2.py  server.py  test.py
src/app/: app.py  main.py  unusedschemas.py
src/app/routers/: api.py  index.py  webapp.py  webhook.py
src/app/schemas/: __init__.py  campaign.py  sms.py  user.py
src/app/templates/: add_user_form  conversation  conversation.html  error  home  home.html  index.html  layout  layout.html  list_users
src/app/templates/campaign/: list_campaigns  new_campaign_form  show_campaign
src/db/: __init__.py  campaign_repo.py  crud.py  database.py  models.py  repo.py  repos.py  schemas.py  services.py  user_repo.py
src/tb_storage/: database.py  models.py
src/webhook/: app.py  main.py  schemas.py
tests/: conftest.py  test_api.py
tests/app/: test_api.py  test_app.py
tests/db/: test_campaign.py  test_reached_repo.py  test_user_repo.py  test_user_service.py
tests/tb_storage/: test_campaign.py  test_user_repo.py
tests/webhook/: test_webhook.py
