# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "TextBlaster"
authors = [{ name = "Ravi Terala", email = "rterala@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
description = "Text Blaster"
version = "0.1.0"
# dynamic = ["version", "description"]
dependencies = [
    "alembic",
    "fastapi",
    "openapi",
    "pandas",
    "sqlalchemy",
    "vonage",
    "psycopg2-binary",
]

# [tool.setuptools]
# disable-wheel = true

[project.optional-dependencies]
test = ["pytest", "assertpy", "httpx", "coverage"]
dev = ["black", "ruff"]

[tool.pytest.ini_options]
# rootdir = "."
pythonpath = ["src"]
testpaths = ["tests"]
