# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "TextBlaster"
authors = [{ name = "Ravi Terala", email = "rterala@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
description = "Text Blaster"
version = "0.1.0"
# dynamic = ["version", "description"]
dependencies = [
  "alembic",
  "fastapi",
  "openapi",
  "pandas",
  "sqlalchemy[asyncio]",
  "vonage",
  "psycopg2-binary",
]

# [tool.setuptools]
# disable-wheel = true

[project.optional-dependencies]
test = ["pytest", "assertpy", "httpx", "coverage"]
dev = ["ruff", "mypy"]

[tool.pytest.ini_options]
# rootdir = "."
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
exclude = ["old", "venv"]
target-version = "py312"

# Formatting
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Allow fix for all enabled rules (when '--fix') is provided
fixable = ["ALL"]
extend-select = [ "I" ]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"

